# AVRSim

./: .gitignore  progress.md  readme.md
AVRSim/: CMakeLists.txt  main.cpp  readme.md
AVRSim.xcodeproj/: project.pbxproj
AVRSim.xcodeproj/project.xcworkspace/xcuserdata/aanas.xcuserdatad/xcdebugger/: Expressions.xcexplist
AVRSim.xcodeproj/xcshareddata/xcschemes/: AVRSim.xcscheme
AVRSim.xcodeproj/xcuserdata/aanas.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AVRSim.xcodeproj/xcuserdata/aanas.xcuserdatad/xcschemes/: xcschememanagement.plist
AVRSim/inc/: avr copy.hpp  executer.hpp  fetcher.hpp  processor.hpp  registers.hpp
AVRSim/src/: decoder.cpp  executer.cpp  fetcher.cpp  processor.cpp
doc/: progress.md
inc/: Executable.hpp  avr.hpp  decoder.hpp  fetcher.hpp  processor.hpp  registers.hpp
src/: Executable.cpp  decoder.cpp  fetcher.cpp  main.cpp  processor.cpp
